--- a/popup.html
+++ b/popup.html
@@ -13,11 +13,11 @@
         <p><textarea id="session"></textarea>
         <p id="copy-p"><button id="copy">复制session</button> <span id="success-tip">&#10003;</span> <span id="error-tip">x</span>
 
-        <div class="advance-settings">
+        <div class="advance-settings" style="display: none">
             <p>高级设置: </p>
-            <p>需要重定向的地址：<input class="input" id="from_url" name="from_url" type="text" />
-            <p>cookie 域名：<input class="input" id="cookie_domain" name="cookie_domain" type="text" />
-            <p>网站域名：<input class="input" id="site_url" type="text" name="site_url" />
+            <p>需要重定向的地址：<input class="input" id="from_url" name="from_url" type="text" disabled />
+            <p>cookie 域名：<input class="input" id="cookie_domain" name="cookie_domain" type="text" disabled />
+            <p>网站域名：<input class="input" id="site_url" type="text" name="site_url" disabled />
         </div>
     </div>
 </body>
