--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,7 @@
         <p>重定向地址：<input class="input" id="to_url" name="to_url" type="text" />
         <p><textarea id="session"></textarea>
         <p id="copy-p"><button id="copy">复制session</button> <span id="success-tip">&#10003;</span> <span id="error-tip">x</span>
+        <p id="session_id">上次生成id: <span id="last_session_id">5bd7cae6b1c0de8efa1989a4</span></p>
 
         <div class="advance-settings" style="display: none">
             <p>高级设置: </p>
@@ -19,6 +20,10 @@
             <p>cookie 域名：<input class="input" id="cookie_domain" name="cookie_domain" type="text" disabled />
             <p>网站域名：<input class="input" id="site_url" type="text" name="site_url" disabled />
         </div>
+    </div>
+
+    <div style="position: absolute; left: 100000px">
+        <input id="copy_session_id">
     </div>
 </body>
 
