--- a/popup.html
+++ b/popup.html
@@ -11,14 +11,14 @@
         <p>是否重定向API：<input type="checkbox" id="status" name="status" /><label for="status">anything</label>
         <p>重定向地址：<input class="input" id="to_url" name="to_url" type="text" />
         <p><textarea id="session"></textarea>
-        <p id="copy-p"><button id="copy">复制session</button> <span id="success-tip">&#10003;</span> <span id="error-tip">x</span>
-        <p id="session_id">上次生成id: <span id="last_session_id">5bd7cae6b1c0de8efa1989a4</span></p>
+        <p id="copy-p" style="display:none"><button id="copy">复制session</button> <span id="success-tip">&#10003;</span> <span id="error-tip">x</span>
+        <p id="session_id" style="display:none">上次生成id: <span id="last_session_id">5bd7cae6b1c0de8efa1989a4</span></p>
 
-        <div class="advance-settings" style="display: none">
+        <div class="advance-settings">
             <p>高级设置: </p>
-            <p>需要重定向的地址：<input class="input" id="from_url" name="from_url" type="text" disabled />
-            <p>cookie 域名：<input class="input" id="cookie_domain" name="cookie_domain" type="text" disabled />
-            <p>网站域名：<input class="input" id="site_url" type="text" name="site_url" disabled />
+            <p>需要重定向的地址：<input class="input" id="from_url" name="from_url" type="text" />
+            <p style="display:none">cookie 域名：<input class="input" id="cookie_domain" name="cookie_domain" type="text" disabled />
+            <p style="display:none">网站域名：<input class="input" id="site_url" type="text" name="site_url" disabled />
         </div>
     </div>
 
