--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,8 @@
             <p style="display:none">cookie 域名：<input class="input" id="cookie_domain" name="cookie_domain" type="text" disabled />
             <p style="display:none">网站域名：<input class="input" id="site_url" type="text" name="site_url" disabled />
         </div>
+
+        <p>快捷键: Alt+C 新标签页打开采购车页面</p>
     </div>
 
     <div style="position: absolute; left: 100000px">
