--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,9 @@
             <p style="display:none">网站域名：<input class="input" id="site_url" type="text" name="site_url" disabled />
         </div>
 
-        <p>快捷键: Alt+C 新标签页打开采购车页面</p>
+        <p>快捷键: </p>
+        <p>Alt+C 新标签页打开采购车页面</p>
+        <p>Alt+D 新标签页打开开发者页面</p>
     </div>
 
     <div style="position: absolute; left: 100000px">
