--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,17 @@
 
         <div class="advance-settings">
             <p>高级设置: </p>
-            <p>需要重定向的地址：<input class="input" id="from_url" name="from_url" type="text" />
+            <!-- <p>需要重定向的地址：<input class="input" id="from_url" name="from_url" type="text" /></p> -->
+            <p>需要重定向的地址: 
+                <select id="select_api" class="input" style="outline: none; width: 250px; height: 33px">
+                    <option value="http://test.api.86yqy.com">http://test.api.86yqy.com</option>
+                    <option value="http://qa1.api.86yqy.com">http://qa1.api.86yqy.com</option>
+                    <option value="http://qa2.api.86yqy.com">http://qa2.api.86yqy.com</option>
+                    <option value="http://qa3.api.86yqy.com">http://qa3.api.86yqy.com</option>
+                    <option value="http://demo.api.86yqy.com">http://demo.api.86yqy.com</option>
+                    <option value="https://api.86yqy.com">https://api.86yqy.com</option>
+                </select>
+            </p>
             <p style="display:none">cookie 域名：<input class="input" id="cookie_domain" name="cookie_domain" type="text" disabled />
             <p style="display:none">网站域名：<input class="input" id="site_url" type="text" name="site_url" disabled />
         </div>
