重定向到的地址不能保存修复

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <p>是否重定向API：<input type="checkbox" id="status" name="status" /><label for="status">anything</label>
-        <p>重定向地址：<input class="input" id="to_url" name="to_url" type="text" />
+        <p>重定向地址：<input class="input input-old" id="to_url" name="to_url" type="text" />
         <p><textarea id="session"></textarea>
         <p id="copy-p" style="display:none"><button id="copy">复制session</button> <span id="success-tip">&#10003;</span> <span id="error-tip">x</span>
         <p id="session_id" style="display:none">上次生成id: <span id="last_session_id">5bd7cae6b1c0de8efa1989a4</span></p>
