--- a/popup.html
+++ b/popup.html
@@ -35,7 +35,8 @@
         <p>快捷键: </p>
         <p>Alt+C 新标签页打开采购车页面</p>
         <p>Alt+D 新标签页打开开发者页面</p>
-        <p><a href="http://192.168.2.154/api-blame" target="_blank">Api Blame</a><span>(查看接口作者、所在控制器、方法)</span></p>
+        <p><a href="http://192.168.2.154/api-blame" target="_blank">Api Blame</a><span> (查看接口作者、所在控制器、方法)</span></p>
+        <p><a href="http://192.168.2.154:5000" target="_blank">Git Helper</a><span> git 助手下载</span></p>
     </div>
 
     <div style="position: absolute; left: 100000px">
