Update readme. Remove unused feature.

--- a/popup.html
+++ b/popup.html
@@ -15,11 +15,10 @@
         <p id="session_id" style="display:none">上次生成id: <span id="last_session_id">5bd7cae6b1c0de8efa1989a4</span></p>
 
         <div class="advance-settings">
-            <p>高级设置: </p>
+            <!--<p>高级设置: </p>-->
             <!-- <p>需要重定向的地址：<input class="input" id="from_url" name="from_url" type="text" /></p> -->
             <p>需要重定向的地址: 
                 <select id="select_api" class="input" style="outline: none; width: 250px; height: 33px">
-                    <option value="http://test.api.86yqy.com">http://test.api.86yqy.com</option>
                     <option value="http://qa1.api.86yqy.com">http://qa1.api.86yqy.com</option>
                     <option value="http://qa2.api.86yqy.com">http://qa2.api.86yqy.com</option>
                     <option value="http://qa3.api.86yqy.com">http://qa3.api.86yqy.com</option>
@@ -32,11 +31,10 @@
             <p style="display:none">网站域名：<input class="input" id="site_url" type="text" name="site_url" disabled />
         </div>
 
-        <p>快捷键: </p>
-        <p>Alt+C 新标签页打开采购车页面</p>
-        <p>Alt+D 新标签页打开开发者页面</p>
-        <p><a href="http://192.168.2.154/api-blame" target="_blank">Api Blame</a><span> (查看接口作者、所在控制器、方法)</span></p>
-        <p><a href="http://192.168.2.154:5000" target="_blank">Git Helper</a><span> git 助手下载</span></p>
+        <!--<p>快捷键: </p>-->
+        <!--<p>Alt+C 新标签页打开采购车页面</p>-->
+        <!--<p>Alt+D 新标签页打开开发者页面</p>-->
+        <p><a href="http://192.168.2.154/api-blame" target="_blank">Api Blame</a><span> (查看接口作者、控制器、方法)</span></p>
     </div>
 
     <div style="position: absolute; left: 100000px">
