--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,7 @@
                     <option value="http://qa3.api.86yqy.com">http://qa3.api.86yqy.com</option>
                     <option value="http://qa2.swoole.86yqy.com">http://qa2.swoole.86yqy.com</option>
                     <option value="http://demo.api.86yqy.com">http://demo.api.86yqy.com</option>
+                    <option value="http://demo.swoole.86yqy.com">http://demo.swoole.86yqy.com</option>
                     <option value="https://api.86yqy.com">https://api.86yqy.com</option>
                 </select>
             </p>
