add swoole domain

--- a/popup.html
+++ b/popup.html
@@ -20,12 +20,13 @@
             <p>需要重定向的地址: 
                 <select id="select_api" class="input" style="outline: none; width: 250px; height: 33px">
                     <option value="http://qa1.api.86yqy.com">http://qa1.api.86yqy.com</option>
+                    <option value="http://qa1.swoole.86yqy.com">http://qa1.swoole.86yqy.com</option>
                     <option value="http://qa2.api.86yqy.com">http://qa2.api.86yqy.com</option>
-                    <option value="http://qa3.api.86yqy.com">http://qa3.api.86yqy.com</option>
                     <option value="http://qa2.swoole.86yqy.com">http://qa2.swoole.86yqy.com</option>
+                    <option value="http://qa3.api.86yqy.com">http://qa3.api.86yqy.com</option>
+                    <option value="http://qa3.swoole.86yqy.com">http://qa3.swoole.86yqy.com</option>
                     <option value="http://demo.api.86yqy.com">http://demo.api.86yqy.com</option>
                     <option value="http://demo.swoole.86yqy.com">http://demo.swoole.86yqy.com</option>
-                    <option value="https://api.86yqy.com">https://api.86yqy.com</option>
                 </select>
             </p>
             <p style="display:none">cookie 域名：<input class="input" id="cookie_domain" name="cookie_domain" type="text" disabled />
